Implemented Production Testtable in Seon

--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintHeadGrid.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintHeadGrid.xaml
@@ -29,8 +29,8 @@
 
         <TextBlock Grid.Row="2" Grid.Column="0" Text="{mvt:LocalizedBinding ControlMode}" Height="26" VerticalAlignment="Center" />
 
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="{mvt:LocalizedBinding TemperatureHead}"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" Text="°C"/>
+        <TextBlock Grid.Row="3" Grid.Column="0" Text="{mvt:LocalizedBinding TemperatureHead}" Name="Temp_Head"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" Text="°C"  Name="Temp_Head_Txt"/>
 
         <TextBlock Grid.Row="4" Grid.Column="0" Text="{mvt:LocalizedBinding TemperatureConditioner}"/>
         <TextBlock Grid.Row="4" Grid.Column="1" Text="°C"/>
@@ -43,6 +43,9 @@
                 <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -75,6 +78,14 @@
             <TextBlock Grid.Row="6" Grid.Column="0" Text="{mvt:LocalizedBinding Valve}"/>
 
             <TextBlock Grid.Row="7" Grid.Column="0" Text="{mvt:LocalizedBinding ImageInCnt}"/>
+
+            <TextBlock Grid.Row="8" Grid.Column="0" Text="{mvt:LocalizedBinding Cooler_Pres}" Name="Cooler_Pres"/>
+            <TextBlock Grid.Row="8" Grid.Column="1" Text="mbar" Name="Cooler_Pres_Text"/>
+
+            <TextBlock Grid.Row="9" Grid.Column="0" Text="{mvt:LocalizedBinding Cooler_Temp}" Name="Cooler_Temp"/>
+            <TextBlock Grid.Row="9" Grid.Column="1" Text="°C" Name="Cooler_Temp_Text"/>
+
+            <TextBlock Grid.Row="10" Grid.Column="0" Text="{mvt:LocalizedBinding ClusterNo}" Name="ClusterNo"/>
         </Grid>
 
         <Grid Grid.Row="0" Grid.Column="2" Grid.RowSpan="7">
