--- a/mvt_digiprint_gui/Views/ConditionerTextCenterView/CTC_TestView.xaml
+++ b/mvt_digiprint_gui/Views/ConditionerTextCenterView/CTC_TestView.xaml
@@ -7,7 +7,8 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:local="clr-namespace:RX_DigiPrint.Views.ConditionerTextCenterView"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <GroupBox Header="Tests" Style="{StaticResource MvtGroupBox}" >
         <Grid>
@@ -22,6 +23,7 @@
                     <ig:TextColumn HeaderText="Name" Key="Name" Width="auto"/>
                     
                     <ig:TextColumn HeaderText="Step" Key="Step" Width="auto"/>
+                    <!--
 
                     <ig:TemplateColumn HeaderText="1" Key="State[0]" >
                         <ig:TemplateColumn.ItemTemplate>
@@ -130,9 +132,10 @@
                             </DataTemplate>
                         </ig:TemplateColumn.ItemTemplate>
                     </ig:TemplateColumn>
+                    -->
 
                     <ig:UnboundColumn Key="End"     HeaderText=" " Width="*" ValueConverter="{StaticResource Filler_Converter}"/>
-                    
+
                 </ig:XamGrid.Columns>
             </ig:XamGrid>
         </Grid>
