--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintHeadView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintHeadView.xaml
@@ -32,11 +32,11 @@
     <Grid MinWidth="100" x:Name="Grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="26"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -46,7 +46,7 @@
             Foreground="{Binding Color, Converter={StaticResource PrintHeadViewStrokeConverter}}"/>
 
         <TextBlock Grid.Row="1" Text="{Binding Name}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        
+
         <Grid Grid.Row="2" Margin="2,0,2,0">
             <Button x:Name="CmdButton"
                     HorizontalAlignment="Stretch" 
@@ -99,11 +99,11 @@
 
         <TextBlock  Grid.Row="5" Margin="0,0,2,0"  HorizontalAlignment="Right"  Text="{Binding PrintingTime}" />
 
-		<Grid  Margin="2,0,2,0" Grid.Row="6" x:Name="ServiceGridPlus" IsVisibleChanged="ServiceGrid_IsVisibleChanged">
+        <Grid  Margin="2,0,2,0" Grid.Row="6" x:Name="ServiceGridPlus" IsVisibleChanged="ServiceGrid_IsVisibleChanged">
 			<Grid.RowDefinitions>
-				<RowDefinition Height="auto"/>
-				<RowDefinition Height="auto"/>
-				<RowDefinition Height="auto"/>
+				<RowDefinition Height="20"/>
+				<RowDefinition Height="20"/>
+				<RowDefinition Height="20"/>
 			</Grid.RowDefinitions>
 			<StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
 				<TextBlock Text="{Binding PumpFeedback, Converter={StaticResource HeadVal_Converter10}}" />
@@ -117,19 +117,19 @@
 
 		</Grid>
 
-		<Grid  Margin="2,0,2,0" Grid.Row="6" x:Name="ServiceGrid" IsVisibleChanged="ServiceGrid_IsVisibleChanged">
+        <Grid  Margin="2,0,2,0" Grid.Row="6" x:Name="ServiceGrid" IsVisibleChanged="ServiceGrid_IsVisibleChanged">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
 
             <common:RxNumBox Grid.Row="0" HorizontalContentAlignment="Right" x:Name="FpVoltage" TextChanged="FpVoltage_TextChanged" IsInt="True" Min="0" Max="120"/>
